--- a/GUI/App.html
+++ b/GUI/App.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TinyA5/1 Encryption</title>
-    <link rel="stylesheet" href="App.css" />
+    <link rel="stylesheet" href="app.css" />
   </head>
   <body>
     <div class="container">
@@ -12,24 +12,23 @@
         <div class="div-left-panel-absolute">
           <div class="left-panel">
             <h1>TINY A5/1</h1>
-            <label for="input-text">Kí tự cần mã hóa</label>
-            <input
-              type="text"
-              id="input-text"
-              placeholder="VD: A"
-              maxlength="1"
-            />
-            <label for="encryption-key">Khóa mã hóa</label>
-            <input
-              type="text"
-              id="encryption-key"
-              placeholder="23 ký tự {0;1}"
-            />
-
-            <button id="encrypt-button">Mã hóa</button>
-            <div id="result">Kết quả mã hóa: <span></span></div>
-            <button id="encrypt-button">Chi tiết mã hóa</button>
-            <button id="decrypt-button">Giải mã =></button>
+            <form id="encryption-form">
+              <label for="input-text">Kí tự cần mã hóa</label>
+              <input type="text" id="input-text-encrypt" placeholder="VD: A" />
+              <label for="encryption-key">Khóa mã hóa</label>
+              <input
+                type="text"
+                id="encryption-key"
+                placeholder="23 ký tự {0;1}"
+                maxlength="23"
+              />
+              <button type="submit" id="encrypt-button">Mã hóa</button>
+            </form>
+            <div id="encrypt-result" class="div-hidden"><span></span></div>
+            <button type="button" id="encrypt-show" class="div-hidden">
+              Chi tiết mã hóa
+            </button>
+            <button type="button" id="to-decrypt-button">Giải mã =></button>
           </div>
         </div>
       </div>
@@ -38,28 +37,29 @@
         <div class="div-right-panel-absolute">
           <div class="right-panel">
             <h1>TINY A5/1</h1>
-            <label for="input-text">Kí tự cần giải mã</label>
-            <input
-              type="text"
-              id="input-text-decrypt"
-              placeholder="VD: A"
-              maxlength="1"
-            />
-            <label for="decryption-key">Khóa giải mã</label>
-            <input
-              type="text"
-              id="decryption-key"
-              placeholder="23 ký tự {0;1}"
-            />
+            <form id="decryption-form">
+              <label for="input-text">Kí tự cần giải mã</label>
+              <input type="text" id="input-text-decrypt" placeholder="VD: A" />
+              <label for="decryption-key">Khóa giải mã</label>
+              <input
+                type="text"
+                id="decryption-key"
+                placeholder="23 ký tự {0;1}"
+                maxlength="23"
+              />
 
-            <button id="encrypt-button">Giải mã</button>
-            <div id="result">Kết quả giải mã: <span></span></div>
-            <button id="encrypt-button">Chi tiết giải mã</button>
-            <button id="decrypt-button"><= Mã hóa</button>
+              <button type="submit" id="decrypt-button">Giải mã</button>
+            </form>
+            <div id="decrypt-result" class="div-hidden"><span></span></div>
+            <button type="button" id="decrypt-show" class="div-hidden">
+              Chi tiết giải mã
+            </button>
+            <button type="button" id="to-encrypt-button"><= Mã hóa</button>
           </div>
         </div>
       </div>
+      <script src="App.js"></script>
+      <script src="API.js"></script>
     </div>
-  <script src="App.js"></script>
   </body>
 </html>
