--- a/GUI/App.html
+++ b/GUI/App.html
@@ -12,7 +12,7 @@
         <div class="div-left-panel-absolute">
           <div class="left-panel">
             <h1>TINY A5/1</h1>
-            <form id="encryption-form">
+            <form id="encryption-form" autocomplete="off">
               <label for="input-text">Kí tự cần mã hóa</label>
               <input type="text" id="input-text-encrypt" placeholder="VD: A" />
               <label for="encryption-key">Khóa mã hóa</label>
@@ -37,7 +37,7 @@
         <div class="div-right-panel-absolute">
           <div class="right-panel">
             <h1>TINY A5/1</h1>
-            <form id="decryption-form">
+            <form id="decryption-form" autocomplete="off">
               <label for="input-text">Kí tự cần giải mã</label>
               <input type="text" id="input-text-decrypt" placeholder="VD: A" />
               <label for="decryption-key">Khóa giải mã</label>
